[project]
name = "midnite_api"
version = "0.1.0"
description = "A python API for midnite"
authors = [{ name = "Samuel Durrant-Walker", email="samueldurw@outlook.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attr==0.3.2",
    "brotli==1.1.0",
    "ConfigParser==7.2.0",
    "cryptography==3.4.8",
    "Cython==3.0.12",
    "dl==0.1.0",
    "docutils==0.21.2",
    "fastapi==0.115.12",  # FastAPI
    "HTMLParser==0.0.2",
    "importlib_metadata==4.6.4",
    "ipython==8.12.3",
    "ipywidgets==8.1.6",
    "Jinja2==3.1.6",
    "jnius==1.1.0",
    "keyring==23.5.0",
    "lockfile==0.12.2",
    "lxml==5.3.2",
    "numpy==2.2.4",
    "ordereddict==1.1",
    "Pillow==11.2.1",
    "protobuf==6.30.2",
    "pydantic==2.11.3",  # Pydantic
    "pyOpenSSL==25.0.0",
    "railroad==0.5.0",
    "Sphinx==8.2.3",
    "sqlmodel==0.0.24",  # SQLModel
    "thread==2.0.5",
    "toml==0.10.2",
    "tornado==6.4.2",
    "xmlrpclib==1.0.1",
    "zipp==1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]